2002-03-20  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Remove dependency on krb524.h and krb524_err.h as
	they may not be present if compiling --without-krb4.

2002-03-05  Ken Raeburn  <raeburn@mit.edu>

	* ftpcmd.y (unix): Define if BSD is defined.

2002-01-08  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c (login): New argument LOGINCODE, optional result code to
	override local use of success code 230 when homedir is not
	accessible but root directory is.
	(user): Pass result code 232 to login.
	(pass): Pass result code 0 to login.

2001-11-30  Tom Yu  <tlyu@mit.edu>

	* ftpcmd.y (pathname): Handle returns from ftpglob() better so
	that errors get sent via reply(), while causing some match
	failures to match to simply return $1, so the higher level can
	deal.  Previously, some failures would cause synch problems since
	NULL would be returned and no reply was sent.

2001-10-11  Mitchell Berger  <mitchb@mit.edu>

	* ftpd.M: Remove improper formatting from the .SH NAME section, as it
	was reported to cause windex generation problems and was inconsistent
	with all the other man pages.

2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* ftpd_var.h, secure.h: Make prototypes unconditional.

2001-08-03  Mitchell Berger  <mitchb@mit.edu>

	* ftpd.M: Update the usage line and option descriptions to be in sync
	with what the code actually does and be in a consistent order.

2001-08-03  Mitchell Berger  <mitchb@mit.edu>

	* ftpd.c (main): Convert to do option parsing with getopt() rather
	than the whitespace-sensitive voodoo we've used in the past.  This
	fixes a bug where use of -u to set a default umask silently failed and
	granted more permission on files than desired if the -u and the mode
	were separated by a space, and likely many other such bugs.

2001-07-04  Ezra Peisach  <epeisach@mit.edu>

	* ftpd.c: Provide prototypes for myoob and lostconn. 

2001-07-03  Ezra Peisach  <epeisach@mit.edu>

	* ftpd.c (sgetpwnam): Remove local declaration of sgetsave.
