@@ -1,3 +1,7 @@
+2002-04-11  Sam Hartman  <hartmans@mit.edu>
+
+	* ftpd.c (adata;): Don't use channel bindings in call to gss_accept
+
 2002-03-20  Ezra Peisach  <epeisach@mit.edu>
 
 	* Makefile.in: Remove dependency on krb524.h and krb524_err.h as
